HAProxy: Bundle static assets and add license attribution
- Download Bootstrap 4.5.2, Font Awesome 5.15.4, Popper.js locally
- Update templates to use local /static/ paths instead of CDNs
- Add LICENSE file with MIT attribution for haproxy-dashboard
- Include third-party component attributions

--- a/spk/haproxy/src/haproxy-dashboard/templates/edit.html
+++ b/spk/haproxy/src/haproxy-dashboard/templates/edit.html
@@ -3,8 +3,8 @@
 <head>
     <title>Edit HAProxy Config</title>
     <!-- Add Bootstrap CSS link here -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/all.min.css">
       <style>
         /* Custom CSS for the header */
         header {
