--- a/spk/haproxy/src/haproxy-dashboard/templates/home.html
+++ b/spk/haproxy/src/haproxy-dashboard/templates/home.html
@@ -3,8 +3,8 @@
 <head>
     <title>Home Page</title>
     <!-- Add Bootstrap CSS link here -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/all.min.css">
     
     <style>
         /* Custom CSS for the header */
@@ -122,8 +122,8 @@
 
     <!-- Add Bootstrap JS and jQuery links here (if needed) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="/static/js/popper.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
     
     
 <script>
