--- a/spk/haproxy/src/haproxy-dashboard/templates/index.html
+++ b/spk/haproxy/src/haproxy-dashboard/templates/index.html
@@ -3,8 +3,8 @@
 <head>
     <title>HAProxy Configurator</title>
     <!-- Add Bootstrap CSS link -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/static/css/all.min.css">
    <style>
         /* Custom CSS for the header */
         header {
@@ -509,8 +509,8 @@
 
     <!-- Add Bootstrap JS and jQuery (required for some Bootstrap components) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="/static/js/popper.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
 
 
     <script>
