--- a/spk/haproxy/src/haproxy-dashboard/templates/logs.html
+++ b/spk/haproxy/src/haproxy-dashboard/templates/logs.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>Log Entries</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/all.min.css">
     <style>
         body {
           
@@ -204,6 +204,6 @@
             </div>
         {% endfor %}
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
 </body>
 </html>
