--- a/spk/haproxy/src/haproxy-dashboard/templates/home.html
+++ b/spk/haproxy/src/haproxy-dashboard/templates/home.html
@@ -33,6 +33,11 @@
             color: white;
             text-decoration: none;
         }
+
+        .menu-link.active {
+            background-color: #3B444B;
+            color: white;
+        }
         
         #summary_container{
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
@@ -77,6 +82,11 @@
             font-weight: bold;
       
       }
+
+      .dark-mode .menu-link.active {
+          color: #2bb9c7;
+          border-bottom: 2px solid #2bb9c7;
+      }
       
       .dark-mode #summary_container{
       
@@ -93,11 +103,11 @@
             <i style="margin: 8px;" class="fas fa-globe"></i>Haproxy Configurator
         </h3>
     </a>
-    <a href="/home" class="menu-link">Home</a>
+    <a href="/home" class="menu-link active">Home</a>
     <a href="/" class="menu-link">Add Frontend & Backend</a>
     <a href="/edit" class="menu-link">Edit HAProxy Config</a>
     <a href="/logs" class="menu-link">Security Events</a>
-    <a href="/statistics" class="menu-link">Statictics</a>
+    <a href="/statistics" class="menu-link">Statistics</a>
     <a  href="http://{{ request.host.split(':')[0] }}:{{ stats_port }}/" class="menu-link" >HAProxy Stats</a>
     
     <div class="custom-control custom-switch ml-auto">
@@ -121,7 +131,7 @@
     </div>
 
     <!-- Add Bootstrap JS and jQuery links here (if needed) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="/static/js/jquery.slim.min.js"></script>
     <script src="/static/js/popper.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
     
